--- a/ds1t-a/one-page-doceria/index.html
+++ b/ds1t-a/one-page-doceria/index.html
@@ -71,7 +71,7 @@
 
                 <div class="item_cardapio_frango">
                     <div class="img_itens">
-                        <img src="img/image 14.png" alt="">
+                        <img src="img/image_14.png" alt="">
                     </div>
                     <p class="titulo_itens">
                         Frango Assado</p>
@@ -86,7 +86,7 @@
                 <div class="rabanadao">
                     <div class="item_cardapio_rabanada">
                         <div class="img_itens">
-                            <img src="img/image 13.png" alt="">
+                            <img src="img/image_13.png" alt="">
                         </div>
                         <p class="titulo_itens">
                             Rabanada</p>
@@ -102,7 +102,7 @@
                 <div class="pave">
                     <div class="item_cardapio_pave">
                         <div class="img_itens">
-                            <img src="img/image 15.png" alt="">
+                            <img src="img/image_15.png" alt="">
                         </div>
                         <p class="titulo_itens">
                             Pave de Chocolate</p>
@@ -118,7 +118,7 @@
                 <div class="salpicao">
                     <div class="item_cardapio_salpicao">
                         <div class="img_itens">
-                            <img src="img/image 19.png" alt="">
+                            <img src="img/image_19.png" alt="">
                         </div>
                         <p class="titulo_itens">
                             Salpicão</p>
@@ -150,7 +150,7 @@
                 <div class="maionese">
                     <div class="item_cardapio_maionese">
                         <div class="img_itens">
-                            <img src="img/Capturar 1.png" alt="">
+                            <img src="img/Capturar.png" alt="">
                         </div>
                         <p class="titulo_itens">
                             Maionese</p>
@@ -170,13 +170,13 @@
             </h1>
             <h2 class="subtitulo">A Gulart’s foi feita por uma família carioca, começaram a comemorar o Natal da melhor
                 maneira, fazendo essa data ser especial e doce!</h2>
-            <img class="img_loja" src="./img/image 18.png" alt="">
+            <img class="img_loja" src="./img/image_18.png" alt="">
         </section>
         <section class="contato" id="contato">
             <h1 class="titulo">
                 Contato
             </h1>
-            <img src="./img/image 16.png" alt="" class="maps">
+            <img src="./img/image_16.png" alt="" class="maps">
             <div class="localizacao">
                 <i class="fa-sharp fa-solid fa-location-dot"></i>
                 <h1 class="cidade">RJ - Angra dos Reis</h1>
@@ -184,15 +184,15 @@
             <div class="ig_img">
                 <div class="social">
                     <div class="whatsapp">
-                        <img src="./img/image 17.png" alt="" class="whats">
+                        <img src="./img/image_17.png" alt="" class="whats">
                         <p class="numero">(24)99687-5423</p>
                     </div>
                     <div class="instagram">
-                        <img src="./img/instagram (1) 1.png" alt="" class="insta">
+                        <img src="./img/instagram.png" alt="" class="insta">
                         <p class="ig">@gulart</p>
                     </div>
                     <div class="facebook">
-                        <img src="./img/facebook 2.png" alt="" class="face">
+                        <img src="./img/facebook.png" alt="" class="face">
                         <p class="nome">Gulart’s Natal</p>
                     </div>
                 </div>
