--- a/ds1m-a/genivania/index.html
+++ b/ds1m-a/genivania/index.html
@@ -28,11 +28,13 @@
 
 <body>
     <div vw class="enabled">
-        <div vw-access-button class="active"></div>
+        <div vw-access-button class="active">
+            
+        </div>
         <div vw-plugin-wrapper>
           <div class="vw-plugin-top-wrapper"></div>
         </div>
-      </div>
+    </div>
       <script src="https://vlibras.gov.br/app/vlibras-plugin.js"></script>
       <script>
         new window.VLibras.Widget('https://vlibras.gov.br/app')
@@ -54,6 +56,9 @@
                 </li>
             </ul>
         </nav>
+        <div class="menu1">
+            <img class = "menu1" src="./img/menu-aberto.png" alt="">
+        </div>
     </header>
     <main>
         <a href="#" class="voltar">
@@ -78,7 +83,7 @@
                 <div class="avatar">
                     <img class="avatar_foto" src="./img/avatares 1.png" alt="foto">
                 </div>
-                <div class="description">
+                <div class="description_sinopse">
                     Jake Sully (Sam Worthington) ficou paraplégico após um combate na Terra.
                     Quando seu irmão morre, Jake é selecionado para substituí-lo no programa Avatar
                     e viaja a Pandora, uma lua extraterrestre, onde encontra diversas formas de vida.
@@ -92,7 +97,6 @@
         <section class="trailer" id="trailer">
             <h5 class="trailer_title"> TRAILER</h5>
             <div class="img_trailer">
-
                 <a href="https://www.youtube.com/watch?v=0Jgk65L6VxM" target="_blank" class="card">
                     <img class="trailer_avatar" src="./img/Avatar-youtube 1.png" alt="foto">
                 </a>
@@ -121,7 +125,7 @@
         <section class="curiosidade" id="curiosidade">
             <h1 class="title_curiosidades">CURIOSIDADES</h1>
             
-           <div class="description">
+           <div class="description_curiosidade">
                <ul>
                 <li>° Do mesmo diretor de Titanic;</li>
                 <li>° Ganhou três prêmios no Oscar, nas categorias de Melhor Fotografia, Melhor Direção de Arte e Melhores Efeitos Especiais;</li>
@@ -129,7 +133,7 @@
                      filme com maior arrecadação da história do cinema.</li>
                </ul>
             </div>
-            <div class="menu2">
+            <div class="menu3">
                 <div class="ticket">
                     <a href="https://www.cinemark.com.br/">
                     <img src="./img/ticket (1).png" alt="tickte">
