--- a/ds1t-b/Projeto FF/index.html
+++ b/ds1t-b/Projeto FF/index.html
@@ -103,17 +103,20 @@
                 <p class="titulo">Personagens</p>
             </div>
                 <div class="blocos-personagens">
-                   <div class="action-button" id="previous">&laquo</div>
                         <div class="icones-personagens" id="icones">
-                           <img class="imagem-personagem" src="./img/Aerith (1).png" alt="">
+                           <img class="imagem-personagem" src="./img/Aerith.png" alt="">
                            <img class="imagem-personagem" src="./img/Tifa.png" alt="">
-                           <img class="imagem-personagem" src="./img/Cloud (2).png" alt="">
-                           <img class="imagem-personagem" src="./img/Barret (2).png" alt="">
-                           <img class="imagem-personagem" src="./img/Sephiroth (1).png" alt="">
+                           <img class="imagem-personagem" src="./img/Cloud.png" alt="">
+                           <img class="imagem-personagem" src="./img/Barret.png" alt="">
+                           <img class="imagem-personagem" src="./img/Sephiroth.png" alt="">
                         </div>
+                </div>
+                <div class="container-slide">
+                    <div class="action-button" id="previous">&laquo</div>
+                    <div class="container-items" id="container-items"></div>
                     <div class="action-button" id="next">&raquo</div>
                 </div>
-                <script src="./script.js"></script>
+                <script class="javascript" src="./script.js"></script>
         </section>
         <section class="producao" id="producao">
             <div class="titulo-producao">
